crates/sith_python_parser/src/parser/tests/snapshots/python_parser__parser__tests__suite__tests__parse_bool_op_and.snap
---
source: crates/sith_python_parser/src/parser/tests/suite.rs
expression: parse_ast
---
(
    BoolOp(
        BoolOpExpr {
            range: 0..7,
            op: And,
            values: [
                Name(
                    NameExpr {
                        range: 0..1,
                        id: "x",
                        ctx: Load,
                    },
                ),
                Name(
                    NameExpr {
                        range: 6..7,
                        id: "y",
                        ctx: Load,
                    },
                ),
            ],
        },
    ),
    [],
)
