crates/sith_python_parser/src/parser/tests/snapshots/python_parser__parser__tests__suite__tests__parse_empty.snap
---
source: crates/sith_python_parser/src/parser/tests/suite.rs
expression: parse_ast
---
(
    [],
    [],
)
